--- a/src/main/resources/templates/changenotices/changenotice-form.html
+++ b/src/main/resources/templates/changenotices/changenotice-form.html
@@ -83,7 +83,7 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Department:</h6>
+                    <h6>Developer:</h6>
                 </div>
                 <div class="col-sm-5">
                     <select class="form-control selectpicker" th:field="*{department}">
