--- a/src/main/resources/templates/changenotices/changenotice-document-list.html
+++ b/src/main/resources/templates/changenotices/changenotice-document-list.html
@@ -16,15 +16,19 @@
 <body>
 <div class="container">
 
-    <a th:href="@{'/changenotices/showChangeNoticeInfo/' + ${changeNotice.id}}">Back to Change notice info</a>
-
     <br><br>
 
     <h3>Change notice Directory</h3>
 
     <hr>
 
-    <form th:action="@{'/changenotices/addDoc/' +  ${changeNotice.id}}" method="post">
+    <form th:action="@{/changenotices/addDocument}" th:object="${changeNotice}" method="post">
+        <input type="hidden" th:field="*{id}">
+        <input type="hidden" th:field="*{name}">
+        <input type="hidden" th:field="*{issueDate}">
+        <input type="hidden" th:field="*{changeCode}">
+        <input type="hidden" th:field="*{department}">
+
         <div class="row mb-1">
             <div class="col-sm-4">
                 <input type="text" th:class="${docErrorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocument" th:value="${docErrorMessage != null || numberErrorMessage != null} ? ${param.newDocument} : ''" placeholder="Decimal number"/>
@@ -62,19 +66,15 @@
                 <th class="align-middle">Decimal number</th>
                 <th class="align-middle">Name</th>
                 <th class="align-middle">Change number</th>
-                <th class="align-middle">Developer</th>
+                <th class="align-middle">Department</th>
                 <th class="align-middle">Action</th>
             </thead>
             <tbody>
                 <tr th:each="entry : ${changeNotice.documents.entrySet()}">
-                    <td class="align-middle">
-                        <a th:href="@{'/documents/showDocumentInfo/' + ${entry.key.id}}" th:target="_blank" th:text="${entry.key.decimalNumber}"></a>
-                    </td>
+                    <td class="align-middle" th:text="${entry.key.decimalNumber}"></td>
                     <td class="align-middle" th:text="${entry.key.name}"></td>
                     <td class="align-middle text-center" th:text="${entry.value}"></td>
-                    <td class="align-middle">
-                        <a th:if="${entry.key.department != null}" th:href="@{'/departments/showDepartmentInfo/' + ${entry.key.department.id}}" th:target="_blank" th:text="${entry.key.department.name}"></a>
-                    </td>
+                    <td class="align-middle text-center" th:text="${entry.key.department == null} ? '' : ${entry.key.department.name}"></td>
                     <td class="align-middle text-center">
                         <a class="btn btn-sm btn-outline-danger"
                            th:href="@{'/changenotices/removeDoc/' + ${changeNotice.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
