--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -17,15 +17,15 @@
 <body>
     <div class="container">
 
-        <a th:href="@{/}">Back to Home page</a>
+        <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
 
         <br><br>
 
-        <h3>List of Departments</h3>
+        <h3 th:text="#{departments.headline}">List of Departments</h3>
 
         <hr>
 
-        <a th:href="@{/departments/showAddForm}" class="btn btn-primary btn-sm mb-3">Add Department</a>
+        <a th:href="@{/departments/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{departments.addNew}">Add Department</a>
 
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
