--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -18,11 +18,11 @@
 
     <div class="container">
 
-        <a th:href="@{/}">Back to Home page</a>
+        <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
 
         <br><br>
 
-        <h3>List of Documents</h3>
+        <h3 th:text="#{documents.headline}">List of Documents</h3>
 
         <hr>
 
@@ -110,7 +110,7 @@
 
         <br><br>
 
-        <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3">Add Document</a>
+        <a th:href="@{/documents/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{documents.addNew}">Add Document</a>
 
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
