--- a/src/main/resources/templates/internaldispatches/internaldispatch-list.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-list.html
@@ -16,16 +16,16 @@
 <body>
 <div class="container">
 
-    <a th:href="@{/}">Back to Home page</a>
+    <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
 
     <br><br>
 
-    <h3>List of Internal dispatches</h3>
+    <h3 th:text="#{internaldispatches.headline}">List of Internal dispatches</h3>
 
     <hr>
 
 
-    <a th:href="@{/internaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3">Add Internal Dispatch</a>
+    <a th:href="@{/internaldispatches/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{internaldispatches.addNew}">Add Internal Dispatch</a>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
