Add more tests to DocumentServiceImplTest

--- a/src/main/resources/templates/changenotices/changenotice-list.html
+++ b/src/main/resources/templates/changenotices/changenotice-list.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Change notices list</title>
+    <title th:text="#{changenotices.headline}">Change notices list</title>
 </head>
 <body>
     <div class="container">
