--- a/src/main/resources/templates/companies/company-list.html
+++ b/src/main/resources/templates/companies/company-list.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Companies List</title>
+    <title th:text="#{companies.headline}">Companies List</title>
 </head>
 <body>
     <div class="container">
