--- a/src/main/resources/templates/externaldispatches/externaldispatch-list.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-list.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>External Dispatches List</title>
+    <title th:text="#{externaldispatches.headline}">External Dispatches List</title>
 </head>
 <body>
 <div class="container">
