--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
 
-    <title>List of Departments</title>
+    <title th:text="#{departments.headline}">List of Departments</title>
 </head>
 <body>
     <div class="container">
