--- a/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Albums list</title>
+    <title th:text="#{copiesArchive.headline}">Albums list</title>
 </head>
 <body>
 <div class="container">
