--- a/src/main/resources/templates/internaldispatches/internaldispatch-list.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-list.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Internal Dispatch List</title>
+    <title th:text="#{internaldispatches.headline}">Internal Dispatch List</title>
 </head>
 <body>
 <div class="container">
