--- a/src/main/resources/templates/externaldispatches/externaldispatch-list.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-list.html
@@ -29,12 +29,12 @@
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="letterOutgoingNumber">Letter outgoing number</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="dispatchDate">Dispatch date</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="company">Company</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="waybill">Waybill</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="status">Status</a></th>
-                <th class="align-middle">Remark</th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="letterOutgoingNumber" th:text="#{letterOutgoingNumber}">Letter outgoing number</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="dispatchDate" th:text="#{dispatchDate}">Dispatch date</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="company" th:text="#{company}">Company</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="waybill" th:text="#{waybill}">Waybill</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="status" th:text="#{status}">Status</a></th>
+                <th class="align-middle" th:text="#{remark}">Remark</th>
             </tr>
         </thead>
         <tbody>
@@ -47,7 +47,7 @@
                     <a th:if="${tempExternal.company != null}" th:href="@{'/companies/showCompanyInfo/' + ${tempExternal.company.id}}" th:target="_blank" th:text="${tempExternal.company.name}"></a>
                 </td>
                 <td class="align-middle text-center" th:text="${tempExternal.waybill}"></td>
-                <td class="align-middle text-center" th:text="${tempExternal.status.name}"></td>
+                <td class="align-middle text-center" th:text="#{${'status.' + tempExternal.status}}"></td>
                 <td class="align-middle text-center" th:text="${tempExternal.remark}"></td>
             </tr>
         </tbody>
@@ -55,7 +55,7 @@
 
     <div class="row mb-3">
         <div class="col-sm-6">
-            Show <span sd:page-size-selector="javascript"></span> entries
+            <span th:text="#{showEntries}"></span> <span sd:page-size-selector="javascript"></span>
         </div>
     </div>
 
