--- a/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
@@ -28,10 +28,10 @@
         <form action="#" th:action="@{/internaldispatches/list/albums}" method="get">
             <div class="row">
                 <div class="col-sm-3 m-1">
-                    <input type="text" class="form-control" th:name="albumName" th:value="${param.albumName}" placeholder="Album decimal number">
+                    <input type="text" class="form-control" th:name="albumName" th:value="${param.albumName}" th:placeholder="#{albumDecimalNumber}">
                 </div>
-                <button type="submit" class="btn btn-info col-2 m-1">Search</button>
-                <a th:href="@{/internaldispatches/list/albums}" class="btn btn-danger col-2 m-1">Clear filter</a>
+                <button type="submit" class="btn btn-info col-2 m-1" th:text="#{search}">Search</button>
+                <a th:href="@{/internaldispatches/list/albums}" class="btn btn-danger col-2 m-1" th:text="#{clearFilters}">Clear filters</a>
             </div>
         </form>
     </div>
@@ -41,13 +41,13 @@
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="albumName">Album name</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="stamp">Stamp</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="dispatchHandler">Current handler</a></th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="internalHandlerName">Handler name</a></th>
-                <th class="align-middle">Handler phone number</th>
-                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="receivedInternalDate">Received date</a></th>
-                <th class="align-middle">Action</th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="albumName" th:text="#{albumDecimalNumber}">Album name</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="stamp" th:text="#{stamp}">Stamp</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="dispatchHandler" th:text="#{currentHandler}">Current handler</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="internalHandlerName" th:text="#{handlerName}">Handler name</a></th>
+                <th class="align-middle" th:text="#{handlerPhoneNumber}">Handler phone number</th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="receivedInternalDate" th:text="#{receivedDate}">Received date</a></th>
+                <th class="align-middle" th:text="#{action}">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -62,7 +62,7 @@
                 <td class="align-middle text-center" th:text="${tempAlbum.receivedInternalDate}"></td>
                 <td class="align-middle text-center">
                     <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/internaldispatches/showChangeHandlerForm/' + ${tempAlbum.id}}">Change handler</a>
+                       th:href="@{'/internaldispatches/showChangeHandlerForm/' + ${tempAlbum.id}}" th:text="#{changeHandler}">Change handler</a>
                 </td>
             </tr>
         </tbody>
@@ -70,7 +70,7 @@
 
     <div class="row mb-3">
         <div class="col-sm-6">
-            Show <span sd:page-size-selector="javascript"></span> entries
+            <span th:text="#{showEntries}"></span> <span sd:page-size-selector="javascript"></span>
         </div>
     </div>
 
